Webpack finish move

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wojciech Sadomski Homepage</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   </head>
   <body>
     <header id="navigation">
       <button class="hamburger hamburger--js">Menu</button>
       <nav class="navigation navigation--js">
         <a class="navigation__link" href="index.html">Główna</a>
-        <a class="navigation__link" href="CSS-szkolenie.html">CSS</a>
-        <a class="navigation__link" href="HTML-szkolenie.html">HTML</a>
-        <a class="navigation__link" href="Js-szkolenie.html">JS</a>
+        <a class="navigation__link" href="szkolenie-CSS.html">CSS</a>
+        <a class="navigation__link" href="szkolenie-HTML.html">HTML</a>
+        <a class="navigation__link" href="szkolenie-JS.html">JS</a>
         <a class="navigation__link" href="Hobby.html">Hobby</a>
       </nav>
     </header>
