--- a/src/pages/Hobby.html
+++ b/src/pages/Hobby.html
@@ -63,7 +63,7 @@
           </div>
           <div class="grid__element grid__element--2">
             <h3 class="section__header">Nazwa gór</h3>
-            <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
+            <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
           <div class="grid__element grid__element--3">
             <h3 class="section__header">Nazwa gór</h3>
@@ -71,7 +71,7 @@
           </div>
           <div class="grid__element grid__element--4">
             <h3 class="section__header">Nazwa gór</h3>
-            <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
+            <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
           <div class="grid__element grid__element--5">
             <h3 class="section__header">Nazwa gór</h3>
@@ -79,7 +79,7 @@
           </div>
           <div class="grid__element grid__element--6">
             <h3 class="section__header">Nazwa gór</h3>
-            <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
+            <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
         </div>
       </section>
@@ -93,6 +93,10 @@
           właśnie dzięki rowerowi. Korzystając z naszych wspaniałych kolei dla
           średnio objeżdżonego "Janusza" z Warszawy całe województwo mazowieckie
           jest dostępne w ramach "jednodniowej wycieczki"
+          <div class="section">
+            <h3 class="section__header">Mój rower z kamieniem :)</h3>
+            <img class="section__foto--bike" src="../assets/img/rower/rower-z-kamieniem.jpg" alt="" />
+          </div>
         </p>
       </section>
       <section class="section" id="photography">
@@ -113,6 +117,7 @@
     <footer class="footer">
       Strona domowa Wojciech Sadomski
       <a href="#navigation">Powrót na górę strony</a>
+      <p class="clock clock--js"></p>
     </footer>
   </body>
 </html>
