--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -96,6 +96,7 @@
     <footer class="footer">
       Strona domowa Wojciech Sadomski
       <a href="#navigation">Powrót na górę strony</a>
+      <p class="clock clock--js"></p>
     </footer>
   </body>
 </html>
