--- a/src/pages/szkolenie-HTML.html
+++ b/src/pages/szkolenie-HTML.html
@@ -6,13 +6,16 @@
     <title>WTF Webpack starterkit</title>
   </head>
   <body>
-    <nav class="navigation navigation--js">
-      <a class="navigation__link" href="index.html">Główna</a>
-      <a class="navigation__link" href="szkolenie-CSS.html">CSS</a>
-      <a class="navigation__link" href="szkolenie-HTML.html">HTML</a>
-      <a class="navigation__link" href="szkolenie-JS.html">JS</a>
-      <a class="navigation__link" href="Hobby.html">Hobby</a>
-    </nav>
+    <header id="navigation">
+      <button class="hamburger hamburger--js">Menu</button>
+      <nav class="navigation navigation--js">
+        <a class="navigation__link" href="index.html">Główna</a>
+        <a class="navigation__link" href="szkolenie-CSS.html">CSS</a>
+        <a class="navigation__link" href="szkolenie-HTML.html">HTML</a>
+        <a class="navigation__link" href="szkolenie-JS.html">JS</a>
+        <a class="navigation__link" href="Hobby.html">Hobby</a>
+      </nav>
+    </header>
     <main>
       <header>
         <h1 class="global__header">HTML</h1>
@@ -25,6 +28,7 @@
     <footer class="footer">
       Strona domowa Wojciech Sadomski
       <a href="#navigation">Powrót na górę strony</a>
+      <p class="clock clock--js"></p>
     </footer>
   </body>
 </html>
