--- a/src/pages/szkolenie-JS.html
+++ b/src/pages/szkolenie-JS.html
@@ -28,6 +28,7 @@
     <footer class="footer">
       Strona domowa Wojciech Sadomski
       <a href="#navigation">Powrót na górę strony</a>
+      <p class="clock clock--js"></p>
     </footer>
   </body>
 </html>
