before branch testing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header id="navigation">
-      <button class="hamburger hamburger--js">Menu</button>
+      <button class="hamburger hamburger--js"></button>
       <nav class="navigation navigation--js">
         <a class="navigation__link" href="index.html">Główna</a>
         <a class="navigation__link" href="szkolenie-CSS.html">CSS</a>
