--- a/src/pages/Hobby.html
+++ b/src/pages/Hobby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -57,27 +57,27 @@
           ciekawoski
         </p>
         <div class="section__gallery">
-          <div class="grid__element grid__element--1">
+          <div>
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
           </div>
-          <div class="grid__element grid__element--2">
+          <div >
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
-          <div class="grid__element grid__element--3">
+          <div >
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
           </div>
-          <div class="grid__element grid__element--4">
+          <div >
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
-          <div class="grid__element grid__element--5">
+          <div >
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/6.JPG" alt="" />
           </div>
-          <div class="grid__element grid__element--6">
+          <div >
             <h3 class="section__header">Nazwa gór</h3>
             <img class="section__foto" src="../assets/img/gory/10.JPG" alt="" />
           </div>
@@ -112,6 +112,24 @@
           Zdjęcia ludzi mnie wkurzają bo odkąd posiadam pociechy mam dwa
           terabajtowe dyski zdjęć uśmiechniętych dzieci ;P.
         </p>
+        <div class="section__gallery">
+        <div class="section">
+          <h3 class="section__header">Panorama</h3>
+          <img class="section__foto" src="../assets/img/fotografia/panorama-dach.jpg" alt="panorama z dachu domu" />
+        </div>
+        <div class="section">
+          <h3 class="section__header">Puszysty trzmiel</h3>
+          <img class="section__foto" src="../assets/img/fotografia/trzmiel.jpg" alt="trzmiel na kwiatku" />
+        </div>
+        <div class="section">
+          <h3 class="section__header">Jeżyk</h3>
+          <img class="section__foto" src="../assets/img/fotografia/jez.jpg" alt="jez z bliska" />
+        </div>
+        <div class="section">
+          <h3 class="section__header">Zachód słóńca</h3>
+          <img class="section__foto" src="../assets/img/fotografia/zacho-slonca.jpg" alt="zachód słońća" />
+        </div>
+      </div>
       </section>
     </main>
     <footer class="footer">
