--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wojciech Sadomski Homepage</title>
+
+    <meta
+      name="Wojciech Sadomski Hompage"
+      content="Strona służąca do testów oraz sortowania zebranej wiedzy"
+    />
+    <!-- Title -->
+    <meta property="og:title" content="Wojciech Sadomski Hompage" />
+    <!-- OPTIONAL description. 2-4 sentences. -->
+    <meta
+      property="og:description"
+      content="Strona służąca do testów oraz sortowania zebranej wiedzy"
+    />
+    <meta
+      property="og:url"
+      content="https://wojciech-sadomski.github.io/homepage-webpack/"
+    />
+    <meta
+      property="og:image"
+      content="https://wojciech-sadomski.github.io/homepage-webpack/web-design-magic.jpg.png"
+    />
   </head>
   <body>
     <header id="navigation">
@@ -47,7 +67,8 @@
       <section class="section">
         <h2 class="section__header">Notatki z WTF</h2>
         <p class="section__text section__text--js">
-          Poniżej nauka podzielona na poszczególne dziedziny
+          Poniżej poszczególne etapy mojej nauki oraz moje dotychczasowe
+          dokonania
         </p>
       </section>
       <section class="section">
@@ -66,18 +87,8 @@
         </p>
       </section>
       <section class="section">
-        <h2 class="section__header">2. CSS</h2>
-        <p class="section__text">
-          Arkusz stylów CSS to lista dyrektyw (tzw. reguł) ustalających w jaki
-          sposób ma zostać wyświetlana przez przeglądarkę internetową zawartość
-          wybranego elementu (lub elementów) (X)HTML lub XML. Można w ten sposób
-          opisać wszystkie pojęcia odpowiedzialne za prezentację elementów
-          dokumentów internetowych, takie jak rodzina czcionek, kolor tekstu,
-          marginesy, odstęp międzywierszowy lub nawet pozycja danego elementu
-          względem innych elementów bądź okna przeglądarki. Wykorzystanie
-          arkuszy stylów daje znacznie większe możliwości pozycjonowania
-          elementów na stronie, niż oferuje sam (X)HTML.
-        </p>
+        <h2 class="section__header">2. Lista moich repozytoriów</h2>
+        <ul class="section__text--list section__text--list--js"></ul>
       </section>
 
       <section class="section">
