--- a/src/pages/szkolenie-CSS.html
+++ b/src/pages/szkolenie-CSS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,10 +29,15 @@
       <section class="grid__section grid__section--1">
         <h2 class="section__header">CSS</h2>
         <p class="section__text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quidem
-          enim distinctio sed? Necessitatibus perferendis natus est similique
-          dolorem! Sit esse libero excepturi tempora non a praesentium
-          voluptatum assumenda dolores.
+          Arkusz stylów CSS to lista dyrektyw (tzw. reguł) ustalających w jaki
+          sposób ma zostać wyświetlana przez przeglądarkę internetową zawartość
+          wybranego elementu (lub elementów) (X)HTML lub XML. Można w ten sposób
+          opisać wszystkie pojęcia odpowiedzialne za prezentację elementów
+          dokumentów internetowych, takie jak rodzina czcionek, kolor tekstu,
+          marginesy, odstęp międzywierszowy lub nawet pozycja danego elementu
+          względem innych elementów bądź okna przeglądarki. Wykorzystanie
+          arkuszy stylów daje znacznie większe możliwości pozycjonowania
+          elementów na stronie, niż oferuje sam (X)HTML.
         </p>
       </section>
       <section class="grid__section">
