--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://wojciech-sadomski.github.io/homepage-webpack/web-design-magic.jpg.png"
+      content="https://wojciech-sadomski.github.io/homepage-webpack/web-design-magic.jpg"
     />
   </head>
   <body>
